# OpenPAYGO-Token

./: .gitignore  LICENSE  README.md  decode_token.py  encode_code.py  encode_token.py  requirements.txt  setup.cfg  setup.py  shared.py  shared_extended.py
.github/workflows/: openpaygo-token.yaml
documentation/examples/: example_device_list.csv
example/: example_scenario.py  token_generator.py
openpaygo/: decode_token.py  encode_token.py  shared_extended.py
openpaygo-token/: __init__.py  decode_token.py  encode_token.py
openpaygo-token/simulators/: __init__.py  device_simulator.py  server_simulator.py
openpaygo/simulators/: __init__.py  device_simulator.py  server_simulator.py
security_audit/: bruteforce_key.py  bruteforce_starting_code.py
simulators/: device_simulator.py  server_simulator.py
tests/: README.md  full_test_procedure.py  helpers.py  scenario.py  simple_scenario_test.py  test_spreadsheet_generator.py  token_generator.py
tests/security_audit/: bruteforce_key.py  bruteforce_starting_code.py
tools/: key_generator.py  verification_scenario.py
tools/csv_generator/: README.md  openpaygo_csv_generator.py
tools/factory_flasher/: README.md  factory_flashing_tool.py
validation_test/: helpers.py  test_spreadsheet_generator.py  test_spreadsheet_generator_validator.py
